--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   unifi-log-insight:
     build: .
-    container_name: unifi-log-insight
+    container_name: unifi-log-insight-beta
     restart: unless-stopped
     ports:
       - "514:514/udp"
