--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   unifi-log-insight:
-    build: .
+    image: ghcr.io/jmasarweh/unifi-log-insight:2.3.0
     container_name: unifi-log-insight
     restart: unless-stopped
     ports:
